# freetier-atlas

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .secrets.baseline  ADDITIONAL_TERMS.md  AGENTS.md  AUTHORS.md  CODEX_TASKS.md  CONTRIBUTING.md  NOTICE  PLAN.md  README.md  THIRD_PARTY_NOTICES.md  THIRD_PARTY_NOTICES_DRAFT.md  TRADEMARKS.md  alembic.ini  docker-compose.yml  eslint.config.js  package-lock.json  package.json  planning-manifest.json  pyproject.toml  requirements-dev.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: report-incorrect-offer.md  suggest-service.md
.github/workflows/: ci.yml
agent-state/: current_contract.json  evaluation.json  feature_list.json  progress.md
apps/api/: .dockerignore  Dockerfile  README.md  entrypoint.sh  requirements.txt
apps/api/app/: __init__.py  db.py  main.py  settings.py
apps/api/app/classify/: __init__.py  engine.py  orm.py
apps/api/app/config/: __init__.py  cli.py  loader.py  models.py
apps/api/app/ingest/: __init__.py  base.py  config_sync.py  fetch.py  reconcile.py  reference.py  runner.py  scan.py  trust.py  (+1 more)
apps/web/: Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/web/src/: App.css  App.test.tsx  App.tsx  api.test.ts  api.ts  index.css  main.tsx
apps/worker/: .dockerignore  Dockerfile  README.md  requirements.txt
apps/worker/worker/: __init__.py  db.py  health.py  heartbeat.py  main.py  queue.py  runtime.py  scheduler.py  settings.py
config/examples/: application.example.yaml  llm-providers.example.yaml  schedules.example.yaml
config/examples/providers/: cloudflare.example.yaml
docs/: AGENT_HARNESS.md  ARCHITECTURE.md  BRANCH_PROTECTION.md  CODEX_AUTONOMY_POLICY.md  CODEX_ENVIRONMENT.md  CONFIGURATION.md  DATA_MODEL.md  DECISIONS.md  HOSTING_Z0.md  LICENSING.md  LOCAL_DEVELOPMENT.md  MVP_ACCEPTANCE.md  OPEN_QUESTIONS.md  PRODUCT_REQUIREMENTS.md  PROVIDER_ADAPTERS.md  REPOSITORY_STRUCTURE.md  ROADMAP.md  SECURITY_PRIVACY_ABUSE.md  SOURCE_REUSE_AND_PROVENANCE.md  TEST_STRATEGY.md
docs/adr/: 0001-monorepo.md  0002-z0-model.md  0003-static-hosting.md  0004-yaml-and-postgres.md  0005-licence.md  0006-long-running-agent-harness.md
migrations/: README.md  env.py
migrations/versions/: 0001_scaffold_baseline.py  0002_worker_queue.py  0003_domain_model.py  0004_ingest_candidates.py  0005_change_event_candidate_link.py  0006_quarantine_separation.py  0007_source_slug.py
scripts/: bootstrap-dev.ps1  bootstrap-dev.sh  check-env.ps1  check-env.sh  check.ps1  check.sh  init.ps1  init.sh  smoke.ps1  smoke.sh  stack-down.ps1  stack-down.sh  stack-smoke.ps1  stack-smoke.sh  stack-up.ps1  stack-up.sh  test.ps1  test.sh  validate-config.ps1  validate-config.sh
tests/: test_repo_baseline.py  test_repo_checks.py
tests/integration/: test_domain_migration.py  test_ingest_config_sync.py  test_ingest_reconcile.py  test_ingest_runner.py  test_ingest_scan.py  test_ingest_separation.py  test_publish_pipeline.py  test_read_api.py  test_read_api_search.py  test_stack_health.py
tests/unit/: test_adapter_html.py  test_adapter_html_cloudflare.py  test_adapter_mcp.py  test_adapter_rss.py  test_adapter_structured.py  test_api_health.py  test_config_system.py  test_domain_models.py  test_ingest_config_sync.py  test_ingest_contract.py  test_ingest_fetch.py  test_ingest_reconcile.py  test_ingest_runner.py  test_ingest_trust.py  test_json_extraction.py  test_publish_confidence.py  test_publish_gate.py  test_publish_revalidate.py  test_read_api.py  test_read_api_search.py  test_requirements_sync.py  test_worker_queue.py  test_z0_classifier.py
tools/: __init__.py  node_check.mjs  repo_checks.py
(+82 files in other folders)
