[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "freetier-atlas"
version = "0.1.0.dev0"
description = "Evidence-backed catalogue and architecture adviser for zero-cost cloud and developer services."
readme = "README.md"
requires-python = ">=3.13"
license = "AGPL-3.0-or-later"
authors = [{ name = "Sergiy" }]
keywords = ["free-tier", "cloud", "catalogue", "adviser", "z0"]

# Runtime dependencies for the F002 application scaffold. These pins MUST stay
# in sync with apps/api/requirements.txt (enforced by
# tests/unit/test_requirements_sync.py).
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "sqlalchemy==2.0.36",
  "alembic==1.14.0",
  "psycopg[binary]==3.2.3",
  "pydantic-settings==2.7.0",
]

[project.optional-dependencies]
dev = [
  "ruff==0.14.5",
  "pytest==9.0.3",
  "detect-secrets==1.5.0",
  "pip-audit==2.9.0",
  "httpx==0.28.1",
]

[project.urls]
Homepage = "https://github.com/stsyg/freetier-atlas"
Repository = "https://github.com/stsyg/freetier-atlas"

[tool.setuptools.packages.find]
# The API application package lives under apps/api.
where = ["apps/api"]
include = ["app*"]

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = [".venv", "node_modules", "dist", "build"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "W",   # pycodestyle warnings
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"
# Make the API package importable in tests without requiring an editable install.
pythonpath = ["apps/api"]
markers = [
  "integration: tests that require the live Docker Compose stack (run by scripts/stack-smoke).",
]
